INF133 added more sections

--- a/index.html
+++ b/index.html
@@ -31,95 +31,194 @@
       </div>
 
       <div id="main-content">
-
-        <div id="education" class="subsection">
-          <a class="subsection-icon" href="#education"><img class="icon" src=./img/education-icon.png></a>
-          <h2>Education</h2>
-          <div id="school" class="info">
-            <div class="info-head"> University of California, Irvine </div>
-            <div class="info-detail">
-              Started September 2014, Graduating December 2018
+        <section id="education" class="subsection">
+          <div class="subsection-head">
+            <a class="subsection-icon" href="#education"><img class="icon" src=./img/education-icon.png></a>
+            <div class="subsection-name">
+              <h2>Education</h2>
             </div>
           </div>
-          <div class="subsection-p">
-            Relevant Coursework
-            <ul class="courses">
-              <li>
-                Data Structures and Algorithms
-                <div class="course-description">
-                  Pull from UCI course listing
-                </div>
-              </li>
-              <li>
-                Project management
-                <div class="course-description">
-                  Pull from UCI course listing
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div id="experience" class="subsection">
-          <a class="subsection-icon" href="#experience"><img class="icon" src=./img/work-icon.png></a>
-          <h2>Experience</h2>
-          <div class="info">
-            <div class="info-head"> The Portal </div>
-            <div class="info-detail">
-              The Portal is a start up based in Irvine that focuses on preparing students for the industry. Student get to work on client projects while learning technologies used in the field.
+          <div class="subsection-body">
+            <div id="school" class="info">
+              <div class="info-head"> University of California, Irvine </div>
+              <div class="info-detail">
+                Started September 2014, Graduating December 2018
+              </div>
             </div>
-            <br />
-          </div>
-          <div class="subsection-p">
-            Worked using React, Express, and Postgres
-          </div>
-
-          <div class="info">
-            <div class="info-head"> Delphi Display Systems </div>
-            <div class="info-detail">
-              Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
+            <div class="subsection-p">
+              <div>
+              </div>
+              Relevant Coursework
+              <ul class="courses">
+                <li class="course">
+                  <div class="course-name">
+                    Data Structures and Algorithms
+                  </div>
+                  <div class="course-description">
+                    Focuses on implementation and mathematical analysis of fundamental data structures and algorithms. Covers storage allocation and memory management techniques.
+                  </div>
+                </li>
+                <li class="course">
+                  <div class="course-name">
+                    Project Management
+                  </div>
+                  <div class="course-description">
+                    Introduces theoretical and practical aspects of project management.
+                    Topics include organizational theory, group behavior, project management skills, case studies, personal and group productivity tools,
+                    management of distributed work, stakeholders, consultants, and knowledge management. Students do a project exercise.
+                  </div>
+                </li>
+                <li>
+                  <div class="course-name">
+                    Introduction to Data Management
+                  </div>
+                  <div class="course-description">
+                    Introduction to the design of databases and the use of database management systems (DBMS) for applications.
+                    Topics include entity-relationship modeling for design, relational data model, relational algebra, relational design theory, and Structured Query Language (SQL) programming.
+                  </div>
+                </li>
+                <li class="course">
+                  <div class="course-name">
+                    Computer Networks
+                  </div>
+                  <div class="course-description">
+                    Computer network architectures, protocols, and applications. Internet congestion control, addressing, and routing. Local area networks. Multimedia networking.
+                  </div>
+                </li>
+              </ul>
             </div>
-            <br />
           </div>
-          <div class="subsection-p">
-              Wrote scripts to automate testing of software using Selenium with Python
-          </div>
-        </div>
+        </section>
 
-        <div id="experience" class="subsection">
-          <a class="subsection-icon" href="#experience"><img class="icon" src=./img/extra-icon.png></a>
-          <h2>Extracurricular</h2>
-          <div class="info">
-            <div class="info-head"> Med App Jam </div>
-            <div class="info-detail">
-              Med App Jam is a two week long collaboartive event in which students from both the software and medical schools collaborate to create a medical focused application
+        <section id="experience" class="subsection">
+          <div class="subsection-head">
+            <a class="subsection-icon" href="#experience"><img class="icon" src=./img/work-icon.png></a>
+            <div class="subsection-name">
+              <h2>Experience</h2>
             </div>
-            <br />
           </div>
-          <div class="subsection-p">
-            Lorizzle stuff dolizzle yippiyo amizzle, crazy fizzle elit. Nullizzle sapizzle velizzle, the bizzle volutpizzle, suscipit quis, gravida vizzle, break it down. I saw beyonces tizzles and my pizzle went crizzle break yo neck, yall tortor. Mofo shizzle my nizzle crocodizzle. Own yo' at dolizzle dapibus rizzle tempizzle away. Maurizzle pellentesque nibh izzle turpis. Vestibulum izzle stuff. Pellentesque fo shizzle my nizzle rhoncizzle dang. In crunk sheezy that's the shizzle dictumst. Donec fo shizzle. Curabitizzle tellizzle you son of a bizzle, pretizzle shiz, mattizzle ac, eleifend vitae, nunc. Stuff suscipit. Integer da bomb dawg sed purizzle.
+          <div class="subsection-body">
+            <div class="info">
+              <div class="info-head"> The Portal </div>
+              <div class="info-detail">
+                The Portal is a start up based in Irvine that focuses on preparing students for the industry. Students get to work on client projects while learning technologies used in the field.
+              </div>
+              <br />
+            </div>
+            <div class="subsection-p">
+              <ul class="work">
+                <li>
+                  Web Development using a JavaScript based stack, using React for the front-end and Postgres running on Express for the backend.
+                </li>
+                <li>
+                  Version control is done using GitHub and bug/issue tracking with Jira.
+                </li>
+                <li>
+                  Most of the work is collaboratively done with other peers at the Portal.
+                </li>
+              </ul>
+            </div>
 
-  Maecenas at mi. Nizzle erizzle. Fizzle condimentizzle, turpis non yippiyo consectetizzle, metizzle check it out crazy purus, egizzle ullamcorpizzle funky fresh mi fo shizzle dope. Cras faucibizzle shizzle my nizzle crocodizzle. Doggy gangsta gangsta, consequat sizzle, shut the shizzle up volutpizzle, porttitor ac, things. Prizzle ass urna. Mammasay mammasa mamma oo sa away mi its fo rizzle yo. Bizzle hendrerit euismizzle felis. black dang shiznit fizzle. Boofron posuere crackalackin stuff. Ut mofo. Shiz nisl metizzle, euismizzle own yo', eleifend sed, malesuada , nisi. Vivamizzle shizzle my nizzle crocodizzle bow wow wow nisl.
-
-  Nunc quizzle arcu. Fo shizzle my nizzle ante. Maecenizzle pot rizzle izzle break yo neck, yall. Ghetto izzle pimpin'. Cras id shit ut dizzle phat condimentum. Break it down we gonna chung my shizz sit fizzle, consectetizzle adipiscing bizzle. Curabitur elizzle shizzle my nizzle crocodizzle, elementum that's the shizzle, eleifend izzle, mollizzle hizzle, pot. Bling bling volutpat. Donizzle gangster cool turpizzle. Suspendisse shizznit. Crizzle shit urna, nizzle izzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle vitae, cool hizzle, sapizzle. Praesent sem orci, shit nizzle, gizzle id, commodo izzle, break it down.
-
-  Praesent dignissim crazy ghetto justo i'm in the shizzle molestie. The bizzle ligula mi, dapibizzle gizzle, lobortis fo shizzle, uhuh ... yih! at, nisl. Sed blandizzle. Suspendisse brizzle. Sizzle nulla erat, ass shit, bibendum nizzle, bibendizzle at, dolor. Suspendisse sizzle mofo. Maecenizzle get down get down tortizzle. Cras izzle i'm in the shizzle. Vestibulum consequat. Donizzle black for sure i'm in the shizzle arcu. That's the shizzle a ghetto vizzle sem eleifend stuff. We gonna chung ghetto, gangster non vestibulizzle mah nizzle, neque libero get down get down fo shizzle my nizzle, vehicula shizznit augue nunc lacinia pede. Quisque uhuh ... yih! sodalizzle dolor. Aliquam fo shizzle volutpizzle. Ma nizzle sagittizzle, dui izzle ultricies consequizzle, break it down lacizzle gravida elit, at sagittis enim crunk sizzle nibh.
+            <div class="info">
+              <div class="info-head"> Delphi Display Systems </div>
+              <div class="info-detail">
+                Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
+              </div>
+              <br />
+            </div>
+            <div class="subsection-p">
+              <ul class="work">
+                <li>
+                  Wrote scripts to automate testing of software using Selenium with Python
+                </li>
+                <li>
+                  Set up master images of operating systems installed with software suites for production
+                </li>
+                <li>
+                  Reviewed technical documents to ensure that team members outside of development could use it
+                </li>
+              </ul>
+            </div>
           </div>
+        </section>
 
-        </div>
+        <section id="extracurricular" class="subsection">
+          <div class="subsection-head">
+            <a class="subsection-icon" href="#extracurricular"><img class="icon" src=./img/extra-icon.png></a>
+            <div class="subsection-name">
+              <h2>Extracurricular</h2>
+            </div>
+          </div>
+          <div class="subsection-body">
+            <div class="info">
+              <div class="info-head"> Med App Jam </div>
+              <div class="info-detail">
+                The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
+              </div>
+              <br />
+            </div>
+            <div class="subsection-p">
+              <uL class="work">
+                <li>
+                  Managed fellow team members in organizational aspects and technical direction
+                </li>
+                <li>
+                  Lead informal meetings for team members that consisted of design discussions and informal workshops on React
+                </li>
+              </uL>
+            </div>
+            <div class="info">
+              <div class="info-head"> Track </div>
+              <div class="info-detail">
+                Track is a web application developed using React (Create React App), Express, and Spotify's API to have create a web-based playlist manager
+              </div>
+              <br />
+            </div>
+            <div class="subsection-p">
+              <uL class="work">
+                <li>
+                  Used open source UI libraries to speed up the development process and focus on functionality while maintaining a clean look
+                </li>
+                <li>
+                  Wrote API calls to gather data from Spotify and format the data for output in React
+                </li>
+              </uL>
+            </div>
+          </div>
+        </section>
+        <section id="contact" class="subsection">
+          <div class="subsection-head">
+            <a class="subsection-icon" href="#contact"><img class="icon" src=./img/contact-icon.png></a>
+            <div class="subsection-name">
+              <h2>Contact</h2>
+            </div>
+          </div>
+          <div class="subsection-body">
+            <div class="profile-picture"><img class="profile" src="./img/profile-picture.JPG"</div>
+            <div class="info">
+              <div class="info-head"> Contact Me </div>
+              <div class="info-detail">
+                Email: ktiet1@uci.edu <br />
+                Phone: 6572389178
+              </div>
+              <br />
+            </div>
+          </div>
+        </section>
       </div>
+
 
 
       <div id="nav-bar">
         <ul>
           <li>
-            <a href="#">HOME</a>
+            <a href="/">HOME</a>
           </li>
           <li>
             <a href="#">MENU</a>
           </li>
           <li>
-            <a href="#">CONTACT</a>
+            <a href="#contact">CONTACT</a>
           </li>
         </ul>
       </div>
