--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
               </div>
             </div>
             <div class="subsection-p">
-              <div>
-              </div>
-              Relevant Coursework
               <ul class="courses">
                 <li class="course">
                   <div class="course-name">
@@ -219,6 +216,10 @@
           </li>
           <li>
             <a href="#contact">CONTACT</a>
+          </li>
+          <li>
+            <a href="./pdf/Resume.pdf">RESUME</a>
+          </li>
           </li>
         </ul>
       </div>
