changes before user testing

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
             <a class="utility-icon" href="https://www.google.com"><img class="icon" src=./img/search-icon.png></a>
           </li>
           <li>
+            <a class="utility-icon" href="#education"><img class="icon" src=./img/education-icon-white.png></a>
+          </li>
+          <li>
+            <a class="utility-icon" href="#experience"><img class="icon" src=./img/work-icon-white.png></a>
+          </li>
+          <li>
+            <a class="utility-icon" href="#extracurricular"><img class="icon" src=./img/extra-icon-white.png></a>
+          </li>
+          <li>
+            <a class="utility-icon" href="#contact"><img class="icon" src=./img/contact-icon-white.png></a>
+          </li>
+          <li>
             <a class="utility-icon" href="https://github.com/khuongTiet"><img class="icon" src=./img/github-icon.png></a>
           </li>
         </ul>
