--- a/index.html
+++ b/index.html
@@ -11,38 +11,51 @@
 
   <body>
     <div class="main-container">
-      <div id="utility-bar">
-        <ul>
-          <li>
-            <a class="utility-icon" href="https://www.google.com"><img class="icon" src=./img/search-icon.png></a>
-          </li>
-          <li>
-            <a class="utility-icon" href="#education"><img class="icon" src=./img/education-icon-white.png></a>
-          </li>
-          <li>
-            <a class="utility-icon" href="#experience"><img class="icon" src=./img/work-icon-white.png></a>
-          </li>
-          <li>
-            <a class="utility-icon" href="#extracurricular"><img class="icon" src=./img/extra-icon-white.png></a>
-          </li>
-          <li>
-            <a class="utility-icon" href="#contact"><img class="icon" src=./img/contact-icon-white.png></a>
-          </li>
-          <li>
-            <a class="utility-icon" href="https://github.com/khuongTiet"><img class="icon" src=./img/github-icon.png></a>
-          </li>
-        </ul>
-      </div>
 
 
       <div id="banner">
-        <h1> KHUONG TIET </h1>
-        <div id="story">
-          I'm currently a 4th year at UCI studying Software Engineering. I really enjoy project management, computer graphics, and automation.
+        <div id="utility-bar">
+          <ul>
+            <li>
+              <a class="utility-icon" href="https://www.google.com"><img class="icon" src=./img/search-icon.png></a>
+            </li>
+            <li>
+              <a class="utility-icon" href="#education"><img class="icon" src=./img/education-icon-white.png></a>
+            </li>
+            <li>
+              <a class="utility-icon" href="#experience"><img class="icon" src=./img/work-icon-white.png></a>
+            </li>
+            <li>
+              <a class="utility-icon" href="#extracurricular"><img class="icon" src=./img/extra-icon-white.png></a>
+            </li>
+            <li>
+              <a class="utility-icon" href="#contact"><img class="icon" src=./img/contact-icon-white.png></a>
+            </li>
+            <li>
+              <a class="utility-icon" href="https://github.com/khuongTiet"><img class="icon" src=./img/github-icon.png></a>
+            </li>
+          </ul>
         </div>
+        <h1> K &nbsp; H &nbsp; U &nbsp; O &nbsp; N &nbsp; G &nbsp;&nbsp; T &nbsp; I &nbsp; E &nbsp; T </h1>
       </div>
 
       <div id="main-content">
+        <section id="bio" class="subsection">
+          <div class="subsection-head">
+            <div class="subsection-name">
+              <h2>Biography</h2>
+            </div>
+          </div>
+          <div class="subsection-body">
+            <div id="about" clas="info">
+              <div class="info-head"> About Me </div>
+              <div class="info-detail">
+                I'm currently a 4th year at UCI studying Software Engineering. I really enjoy project management, computer graphics, and automation.
+              </div>
+            </div>
+          </div>
+        </section>
+        </section>
         <section id="education" class="subsection">
           <div class="subsection-head">
             <a class="subsection-icon" href="#education"><img class="icon" src=./img/education-icon.png></a>
