updated nav bar

--- a/index.html
+++ b/index.html
@@ -15,28 +15,29 @@
 
       <div id="banner">
         <div id="utility-bar">
-          <ul>
+          <ul class="top-utility-bar">
+
             <li>
-              <a class="utility-icon" href="https://www.google.com"><img class="icon" src=./img/search-icon.png></a>
+              <a class="utility-icon" href="#about"><img id="bio-utility-icon" class="icon" src=./img/biography.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#education"><img class="icon" src=./img/education-icon-white.png></a>
+              <a class="utility-icon" href="#education"><img id="school-utility-icon" class="icon" src=./img/school-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#experience"><img class="icon" src=./img/work-icon-white.png></a>
+              <a class="utility-icon" href="#experience"><img id="work-utility-icon" class="icon" src=./img/brief-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#extracurricular"><img class="icon" src=./img/extra-icon-white.png></a>
+              <a class="utility-icon" href="#extracurricular"><img id="project-utility-icon" class="icon" src=./img/laptop.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#contact"><img class="icon" src=./img/contact-icon-white.png></a>
+              <a class="utility-icon" href="#contact"><img id="contact-utility-icon" class="icon" src=./img/phone.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="https://github.com/khuongTiet"><img class="icon" src=./img/github-icon.png></a>
+              <a class="utility-icon" href="https://github.com/khuongTiet"><img id="github-utility-icon" class="icon" src=./img/github.png></a>
             </li>
           </ul>
         </div>
-        <h1> K &nbsp; H &nbsp; U &nbsp; O &nbsp; N &nbsp; G &nbsp;&nbsp; T &nbsp; I &nbsp; E &nbsp; T </h1>
+        <h1> < &nbsp; K &nbsp; H &nbsp; U &nbsp; O &nbsp; N &nbsp; G &nbsp;&nbsp; T &nbsp; I &nbsp; E &nbsp; T &nbsp; /> </h1>
       </div>
 
       <div id="main-content">
@@ -58,7 +59,6 @@
         </section>
         <section id="education" class="subsection">
           <div class="subsection-head">
-            <a class="subsection-icon" href="#education"><img class="icon" src=./img/education-icon.png></a>
             <div class="subsection-name">
               <h2>Education</h2>
             </div>
@@ -114,7 +114,6 @@
 
         <section id="experience" class="subsection">
           <div class="subsection-head">
-            <a class="subsection-icon" href="#experience"><img class="icon" src=./img/work-icon.png></a>
             <div class="subsection-name">
               <h2>Experience</h2>
             </div>
@@ -166,7 +165,6 @@
 
         <section id="extracurricular" class="subsection">
           <div class="subsection-head">
-            <a class="subsection-icon" href="#extracurricular"><img class="icon" src=./img/extra-icon.png></a>
             <div class="subsection-name">
               <h2>Extracurricular</h2>
             </div>
@@ -210,7 +208,6 @@
         </section>
         <section id="contact" class="subsection">
           <div class="subsection-head">
-            <a class="subsection-icon" href="#contact"><img class="icon" src=./img/contact-icon.png></a>
             <div class="subsection-name">
               <h2>Contact</h2>
             </div>
@@ -252,6 +249,7 @@
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    <script src="js/main.js"></script>
+   <script src="js/anime.min.js"></script>
   </body>
 
 <html/>
