added images and mobile navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul class="top-utility-bar">
 
             <li>
-              <a class="utility-icon" href="#about"><img id="bio-utility-icon" class="icon" src=./img/biography.png></a>
+              <a class="utility-icon" href="#bio"><img id="bio-utility-icon" class="icon" src=./img/biography.png></a>
             </li>
             <li>
               <a class="utility-icon" href="#education"><img id="school-utility-icon" class="icon" src=./img/school-icon.png></a>
@@ -47,11 +47,16 @@
               <h2>Biography</h2>
             </div>
           </div>
-          <div class="subsection-body">
-            <div id="about" clas="info">
-              <div class="info-head"> About Me </div>
-              <div class="info-detail">
-                I'm currently a 4th year at UCI studying Software Engineering. I really enjoy project management, computer graphics, and automation.
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/profile-picture.JPG" />
+            </div>
+            <div class="subsection-body">
+              <div id="about" class="info">
+                <div class="info-head"> About Me </div>
+                <div class="info-detail">
+                  I'm currently a 4th year at UCI studying Software Engineering. I really enjoy project management, computer graphics, and automation.
+                </div>
               </div>
             </div>
           </div>
@@ -63,51 +68,56 @@
               <h2>Education</h2>
             </div>
           </div>
-          <div class="subsection-body">
-            <div id="school" class="info">
-              <div class="info-head"> University of California, Irvine </div>
-              <div class="info-detail">
-                Started September 2014, Graduating December 2018
-              </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/UCI-logo.PNG" />
             </div>
-            <div class="subsection-p">
-              <ul class="courses">
-                <li class="course">
-                  <div class="course-name">
-                    Data Structures and Algorithms
-                  </div>
-                  <div class="course-description">
-                    Focuses on implementation and mathematical analysis of fundamental data structures and algorithms. Covers storage allocation and memory management techniques.
-                  </div>
-                </li>
-                <li class="course">
-                  <div class="course-name">
-                    Project Management
-                  </div>
-                  <div class="course-description">
-                    Introduces theoretical and practical aspects of project management.
-                    Topics include organizational theory, group behavior, project management skills, case studies, personal and group productivity tools,
-                    management of distributed work, stakeholders, consultants, and knowledge management. Students do a project exercise.
-                  </div>
-                </li>
-                <li>
-                  <div class="course-name">
-                    Introduction to Data Management
-                  </div>
-                  <div class="course-description">
-                    Introduction to the design of databases and the use of database management systems (DBMS) for applications.
-                    Topics include entity-relationship modeling for design, relational data model, relational algebra, relational design theory, and Structured Query Language (SQL) programming.
-                  </div>
-                </li>
-                <li class="course">
-                  <div class="course-name">
-                    Computer Networks
-                  </div>
-                  <div class="course-description">
-                    Computer network architectures, protocols, and applications. Internet congestion control, addressing, and routing. Local area networks. Multimedia networking.
-                  </div>
-                </li>
-              </ul>
+            <div class="subsection-body">
+              <div id="school" class="info">
+                <div class="info-head"> University of California, Irvine </div>
+                <div class="info-detail">
+                  Started September 2014, Graduating December 2018
+                </div>
+              </div>
+              <div class="subsection-p">
+                <ul class="courses">
+                  <li class="course">
+                    <div class="course-name">
+                      Data Structures and Algorithms
+                    </div>
+                    <div class="course-description">
+                      Focuses on implementation and mathematical analysis of fundamental data structures and algorithms. Covers storage allocation and memory management techniques.
+                    </div>
+                  </li>
+                  <li class="course">
+                    <div class="course-name">
+                      Project Management
+                    </div>
+                    <div class="course-description">
+                      Introduces theoretical and practical aspects of project management.
+                      Topics include organizational theory, group behavior, project management skills, case studies, personal and group productivity tools,
+                      management of distributed work, stakeholders, consultants, and knowledge management. Students do a project exercise.
+                    </div>
+                  </li>
+                  <li>
+                    <div class="course-name">
+                      Introduction to Data Management
+                    </div>
+                    <div class="course-description">
+                      Introduction to the design of databases and the use of database management systems (DBMS) for applications.
+                      Topics include entity-relationship modeling for design, relational data model, relational algebra, relational design theory, and Structured Query Language (SQL) programming.
+                    </div>
+                  </li>
+                  <li class="course">
+                    <div class="course-name">
+                      Computer Networks
+                    </div>
+                    <div class="course-description">
+                      Computer network architectures, protocols, and applications. Internet congestion control, addressing, and routing. Local area networks. Multimedia networking.
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
@@ -118,47 +128,53 @@
               <h2>Experience</h2>
             </div>
           </div>
-          <div class="subsection-body">
-            <div class="info">
-              <div class="info-head"> The Portal </div>
-              <div class="info-detail">
-                The Portal is a start up based in Irvine that focuses on preparing students for the industry. Students get to work on client projects while learning technologies used in the field.
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/portal-logo.png" />
+              <img class="profile" src="./img/delphi-logo.png" />
+            </div>
+            <div class="subsection-body">
+              <div class="info">
+                <div class="info-head"> The Portal </div>
+                <div class="info-detail">
+                  The Portal is a start up based in Irvine that focuses on preparing students for the industry. Students get to work on client projects while learning technologies used in the field.
+                </div>
+                <br />
               </div>
-              <br />
-            </div>
-            <div class="subsection-p">
-              <ul class="work">
-                <li>
-                  Web Development using a JavaScript based stack, using React for the front-end and Postgres running on Express for the backend.
-                </li>
-                <li>
-                  Version control is done using GitHub and bug/issue tracking with Jira.
-                </li>
-                <li>
-                  Most of the work is collaboratively done with other peers at the Portal.
-                </li>
-              </ul>
-            </div>
+              <div class="subsection-p">
+                <ul class="work">
+                  <li>
+                    Web Development using a JavaScript based stack, using React for the front-end and Postgres running on Express for the backend.
+                  </li>
+                  <li>
+                    Version control is done using GitHub and bug/issue tracking with Jira.
+                  </li>
+                  <li>
+                    Most of the work is collaboratively done with other peers at the Portal.
+                  </li>
+                </ul>
+              </div>
 
-            <div class="info">
-              <div class="info-head"> Delphi Display Systems </div>
-              <div class="info-detail">
-                Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
+              <div class="info">
+                <div class="info-head"> Delphi Display Systems </div>
+                <div class="info-detail">
+                  Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
+                </div>
+                <br />
               </div>
-              <br />
-            </div>
-            <div class="subsection-p">
-              <ul class="work">
-                <li>
-                  Wrote scripts to automate testing of software using Selenium with Python
-                </li>
-                <li>
-                  Set up master images of operating systems installed with software suites for production
-                </li>
-                <li>
-                  Reviewed technical documents to ensure that team members outside of development could use it
-                </li>
-              </ul>
+              <div class="subsection-p">
+                <ul class="work">
+                  <li>
+                    Wrote scripts to automate testing of software using Selenium with Python
+                  </li>
+                  <li>
+                    Set up master images of operating systems installed with software suites for production
+                  </li>
+                  <li>
+                    Reviewed technical documents to ensure that team members outside of development could use it
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
@@ -166,43 +182,49 @@
         <section id="extracurricular" class="subsection">
           <div class="subsection-head">
             <div class="subsection-name">
-              <h2>Extracurricular</h2>
+              <h2>Projects</h2>
             </div>
           </div>
-          <div class="subsection-body">
-            <div class="info">
-              <div class="info-head"> Med App Jam </div>
-              <div class="info-detail">
-                The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/react-logo.png" />
+              <img class="profile" src="./img/python-logo.png" />
+            </div>
+            <div class="subsection-body">
+              <div class="info">
+                <div class="info-head"> Med App Jam </div>
+                <div class="info-detail">
+                  The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
+                </div>
+                <br />
               </div>
-              <br />
-            </div>
-            <div class="subsection-p">
-              <uL class="work">
-                <li>
-                  Managed fellow team members in organizational aspects and technical direction
-                </li>
-                <li>
-                  Lead informal meetings for team members that consisted of design discussions and informal workshops on React
-                </li>
-              </uL>
-            </div>
-            <div class="info">
-              <div class="info-head"> Track </div>
-              <div class="info-detail">
-                Track is a web application developed using React (Create React App), Express, and Spotify's API to have create a web-based playlist manager
+              <div class="subsection-p">
+                <uL class="work">
+                  <li>
+                    Managed fellow team members in organizational aspects and technical direction
+                  </li>
+                  <li>
+                    Lead informal meetings for team members that consisted of design discussions and informal workshops on React
+                  </li>
+                </uL>
               </div>
-              <br />
-            </div>
-            <div class="subsection-p">
-              <uL class="work">
-                <li>
-                  Used open source UI libraries to speed up the development process and focus on functionality while maintaining a clean look
-                </li>
-                <li>
-                  Wrote API calls to gather data from Spotify and format the data for output in React
-                </li>
-              </uL>
+              <div class="info">
+                <div class="info-head"> Track </div>
+                <div class="info-detail">
+                  Track is a web application developed using React (Create React App), Express, and Spotify's API to have create a web-based playlist manager
+                </div>
+                <br />
+              </div>
+              <div class="subsection-p">
+                <uL class="work">
+                  <li>
+                    Used open source UI libraries to speed up the development process and focus on functionality while maintaining a clean look
+                  </li>
+                  <li>
+                    Wrote API calls to gather data from Spotify and format the data for output in React
+                  </li>
+                </uL>
+              </div>
             </div>
           </div>
         </section>
@@ -212,38 +234,19 @@
               <h2>Contact</h2>
             </div>
           </div>
-          <div class="subsection-body">
-            <div class="profile-picture"><img class="profile" src="./img/profile-picture.JPG"</div>
-            <div class="info">
-              <div class="info-head"> Contact Me </div>
-              <div class="info-detail">
-                Email: ktiet1@uci.edu <br />
-                Phone: 6572389178
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body">
+              <div class="info">
+                <div class="info-head"> Contact Me </div>
+                <div class="info-detail">
+                  Email: ktiet1@uci.edu <br />
+                  Phone: 6572389178
+                </div>
+                <br />
               </div>
-              <br />
             </div>
           </div>
         </section>
-      </div>
-
-
-
-      <div id="nav-bar">
-        <ul>
-          <li>
-            <a href="/">HOME</a>
-          </li>
-          <li>
-            <a href="#">MENU</a>
-          </li>
-          <li>
-            <a href="#contact">CONTACT</a>
-          </li>
-          <li>
-            <a href="./pdf/Resume.pdf">RESUME</a>
-          </li>
-          </li>
-        </ul>
       </div>
     </div>
 
